--- a/requirements/project/static/css/index.css
+++ b/requirements/project/static/css/index.css
@@ -6,22 +6,27 @@
   --font-heading: "Unbounded", sans-serif;
   --font-body: "Archivo", sans-serif;
 }
+
 @import url("https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Unbounded:wght@200..900&display=swap");
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
+
 a {
   text-decoration: none;
   color: inherit;
 }
+
 body {
   font-family: "Inter", sans-serif;
   line-height: 1.5;
   background-color: #f9f9f9;
   width: 100svw;
 }
+
 /*Header Section CSS*/
 header {
   display: flex;
@@ -37,11 +42,13 @@ header {
   height: 8svh;
   margin-block: 20px;
 }
+
 header .header__logo {
   max-height: 10svh;
   max-width: 10svw;
   width: 50px;
 }
+
 .header__filter-select {
   background-color: #ffffff;
   color: var(--main-color);
@@ -50,15 +57,18 @@ header .header__logo {
   padding: 10px 20px;
   cursor: pointer;
 }
+
 .header__profile-nav {
   display: flex;
   align-items: center;
   gap: 10px;
 }
+
 .header__profile-nav img {
   width: 30px;
   height: 30px;
 }
+
 .header__profile-nav a {
   color: white;
   text-decoration: none;
@@ -66,6 +76,7 @@ header .header__logo {
   background-color: var(--main-color);
   border-radius: 5px;
 }
+
 /*Hero Section CSS*/
 .hero {
   display: flex;
@@ -86,6 +97,7 @@ header .header__logo {
   background-repeat: no-repeat;
   background-size: contain;
 }
+
 .hero__title {
   font-size: 2.5rem;
   max-width: 50%;
@@ -93,11 +105,13 @@ header .header__logo {
   text-align: center;
   font-family: var(--font-heading, monospace);
 }
+
 .hero__description {
   text-align: center;
   font-size: 1.2rem;
   color: var(--main-color);
 }
+
 .hero__cta {
   display: flex;
   flex-direction: row;
@@ -113,6 +127,7 @@ header .header__logo {
   background-color: var(--accent-color);
   border-radius: 5px;
 }
+
 .btn-secondary#btn2 {
   display: block;
   text-decoration: none;
@@ -129,6 +144,7 @@ header .header__logo {
   max-width: 80svw;
   margin: auto;
 }
+
 .main-content__filter-title {
   font-size: 1.5rem;
   margin-block: 20px;
@@ -137,6 +153,7 @@ header .header__logo {
   text-align: center;
   width: 100%;
 }
+
 .main-content__posts {
   display: flex;
   flex-direction: row;
@@ -144,7 +161,9 @@ header .header__logo {
   gap: 30px;
   justify-content: space-between;
 }
-.main-content__posts .container, main .container {
+
+.main-content__posts .container,
+main .container {
   background-color: #ffffff;
   border: solid 1px var(--border-color);
   border-radius: 12px;
@@ -154,7 +173,7 @@ header .header__logo {
 }
 
 /* her i add css to pos from soubaaiss */
-main .containerpost{
+main .containerpost {
   background-color: #ffffff;
   border: solid 1px var(--border-color);
   border-radius: 12px;
@@ -164,12 +183,13 @@ main .containerpost{
   width: 80svw;
   margin: auto;
   margin-bottom: 15px;
+}
 
+main .container {
+  width: 80svw;
+  /*margin: auto;*/
 }
-main .container{
-    width: 80svw;
-    /*margin: auto;*/
-}
+
 .container .post {
   display: flex;
   flex-direction: column;
@@ -177,6 +197,7 @@ main .container{
   justify-content: space-between;
   width: 100%;
 }
+
 .initial {
   display: flex;
   align-items: center;
@@ -194,19 +215,23 @@ main .container{
   font-size: 1.3rem;
   text-transform: uppercase;
 }
+
 .user_container {
   display: flex;
   flex-direction: row;
   align-items: center;
   gap: 10px;
 }
-.likes_dislikes_comment, #likes_dislikes {
+
+.likes_dislikes_comment,
+#likes_dislikes {
   display: flex;
   flex-direction: row;
   align-items: center;
   padding-top: 20px;
   gap: 10px;
 }
+
 .likebtn,
 .dislikebtn {
   background-color: transparent;
@@ -216,11 +241,13 @@ main .container{
   padding: 0;
   margin: 0;
 }
+
 .likebtn:hover,
 .dislikebtn:hover {
   scale: 1.1;
   transition: all 0.3s ease-in-out;
 }
+
 .divider {
   display: block;
   width: 100%;
@@ -229,6 +256,7 @@ main .container{
   margin-block: 10px;
   opacity: 0.2;
 }
+
 .categories {
   display: flex;
   flex-direction: row;
@@ -237,6 +265,7 @@ main .container{
   column-gap: 10px;
   margin-top: 10px;
 }
+
 .category {
   display: inline-block;
   background-color: #f3fafd;
@@ -246,6 +275,7 @@ main .container{
   color: var(--main-color);
   font-size: 0.9rem;
 }
+
 .clamp {
   display: -webkit-box;
   line-clamp: 3;
@@ -253,15 +283,18 @@ main .container{
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
+
 .highlight {
   color: var(--accent-color);
 }
+
 .postbot {
   align-items: center;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
+
 .readmore#btn2 {
   opacity: 0.4;
   display: block;
@@ -273,9 +306,11 @@ main .container{
   border-radius: 5px;
   transition: opacity 0.3s ease-in-out;
 }
+
 .readmore#btn2:hover {
   opacity: 1;
 }
+
 .footer {
   display: flex;
   flex-direction: row;
@@ -290,6 +325,7 @@ main .container{
   height: 8svh;
   margin-block: 20px;
 }
+
 .pagination {
   display: flex;
   flex-direction: row;
@@ -304,14 +340,16 @@ main .container{
   height: 8svh;
   margin-block: 20px;
 }
-.pagination__link{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
+
+.pagination__link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
 }
-header .profile-icon img{
-    color: black;
+
+header .profile-icon img {
+  color: black;
 }
 
 /*** From her soubaiss is the one who add all this ***/
