--- a/requirements/project/static/css/post.css
+++ b/requirements/project/static/css/post.css
@@ -157,10 +157,10 @@ main .container {
   font-weight: 600;
   color: var(--accent-color);
   font-family: var(--font-heading, monospace);
-  border: solid 1px var(--accent-color);
+  /* border: solid 1px var(--accent-color); */
   padding: 10px;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   font-size: 1.3rem;
   text-transform: uppercase;
@@ -168,6 +168,13 @@ main .container {
 
 
 .user_container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+}
+
+.commentcontainer {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -222,9 +229,6 @@ main .container {
   justify-content: space-between;
 }
 
-.highlight {
-  color: var(--accent-color);
-}
 
 
 
