--- a/requirements/project/templates/new_post.html
+++ b/requirements/project/templates/new_post.html
@@ -2,61 +2,70 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/new_post.css">
-    <link rel="icon" href="/static/svg/favicon.svg" type="image/svg">
-    <title>Post</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/static/css/forms.css" />
+  <link rel="icon" href="/static/svg/favicon.svg" type="image/svg" />
+  <title>Post</title>
 </head>
 
 <body>
-    <header>
-        <div id="project_header">
-            <h1><a href="/"><img src="/static/svg/favicon.svg" alt="user profile"></a></h1>
-        </div>
-        <div class="profile-icon">
-            <a href="/logout"><img src="/static/svg/log-out.svg" alt="logout"></a>
-            <a href="/profile"><img src="/static/svg/circle-user-round.svg" alt="user profile"></a>
-        </div>
-    </header>
-    {{if .Error}}
-    <div class="error-container">
-        {{.Message}}
+  <header>
+    <div id="project_header">
+      <h1>
+        <a href="/"><img src="/static/svg/favicon.svg" alt="Forum logo" /></a>
+      </h1>
     </div>
-    {{end}}
-    <div class="form-container">
-        <h4>post</h4>
-        <form action="/newPost" method="POST">
-            <div>
-                <input type="text" id="title" name="title" placeholder="title..." minlength="10" maxlength="70"
-                    required>
-            </div>
-
-            <div>
-                <textarea id="content" name="content" minlength="1" maxlength="10000"
-                    placeholder="insert content here..." required></textarea>
-            </div>
-
-            <div>
-                <fieldset>
-                    <legend>Select Categories</legend>
-                    {{range $key, $value := .Fields}}
-                    <label>
-                        <input type="checkbox" name="Categories" value="{{$key}}">
-                        {{$key}}
-                    </label>
-                    {{end}}
-                </fieldset>
-            </div>
-            <button type="submit">Post</button>
-        </form>
+    <div class="profile-icon">
+      <a href="/logout"><img src="/static/svg/log-out.svg" alt="logout" /></a>
+      <a href="/profile"><img src="/static/svg/circle-user-round.svg" alt="user profile" /></a>
     </div>
-    <footer>
-        <div class="footer-container">
-            <p>&copy; 2025 FORUM — Built with ❤️ by the Forum Team</p>
-        </div>
-    </footer>
+  </header>
 
+  {{if .Error}}
+  <div class="error-container">
+    {{.Message}}
+  </div>
+  {{end}}
+
+  <div class="container">
+    <form action="/newPost" method="POST" class="postForm">
+      <img src="/static/svg/writer.svg" alt="Create post" />
+      <h2>Create a Post</h2>
+      <h1>New Forum Post</h1>
+
+      <div class="formfield">
+        <label for="title">Post Title</label>
+        <input type="text" id="title" name="title" placeholder="Title..." minlength="10" maxlength="70" required />
+      </div>
+
+      <div class="formfield">
+        <label for="content">Content</label>
+        <textarea id="content" name="content" placeholder="Insert content here..." minlength="1" maxlength="10000"
+          required></textarea>
+      </div>
+
+      <div class="formfield">
+        <label>Select Categories</label>
+        <div class="box-group">
+          {{range $key, $value := .Fields}}
+          <div>
+            <input type="checkbox" name="Categories" id="{{$key}}" value="{{$key}}" />
+            <label for="{{$key}}">{{$key}}</label>
+          </div>
+          {{end}}
+        </div>
+      </div>
+
+      <input type="submit" value="Post" />
+    </form>
+  </div>
+
+  <footer>
+    <div class="footer-container">
+      <p>&copy; 2025 FORUM — Built with ❤️ by the Forum Team</p>
+    </div>
+  </footer>
 </body>
 
 </html>
