--- a/requirements/project/templates/register.html
+++ b/requirements/project/templates/register.html
@@ -1,50 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/authentification.css">
-    <link rel="icon" href="/static/svg/favicon.svg" type="image/svg">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/static/css/forms.css" />
+    <link rel="icon" href="/static/svg/favicon.svg" type="image/svg" />
     <title>Register</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header class="header">
-        <div class="header__logo">
-          <a href="/" class="header__logo-link">
-            <img src="/static/svg/logo.svg" alt="Logo" class="header__logo-img" />
+      <div class="header__logo">
+        <a href="/" class="header__logo-link">
+          <img src="/static/svg/logo.svg" alt="Logo" class="header__logo-img" />
+        </a>
+      </div>
+
+      <div class="header__filter">
+        <label
+          for="category-filter"
+          class="header__filter-label visually-hidden"
+          >Filter by Categories:</label
+        >
+        <select
+          id="category-filter"
+          name="category-filter"
+          class="header__filter-select"
+        >
+          <option value="">-- Select a category --</option>
+          {{range $key, $value := .Fields}}
+          <option value="/?filter={{$key}}">{{$key}}</option>
+          {{end}} {{if .Authenticated}}
+          <option value="/?filter=Owned">Owned</option>
+          <option value="/?filter=Likes">Likes</option>
+          {{end}}
+        </select>
+      </div>
+
+      <script>
+        document
+          .getElementById("category-filter")
+          .addEventListener("change", function () {
+            if (this.value) {
+              window.location.href = this.value;
+            }
+          });
+      </script>
+      <div class="user_actions--header">
+        {{if .Authenticated}}
+        <div class="profile_section--header"></div>
+        <div class="nes_post--header">
+          <a
+            href="/newPost"
+            class="readmore"
+            aria-label="Create new post"
+            id="btn2"
+          >
+            <img src="/static/svg/pencil-line.svg" alt="New post icon" />
+            Create Post
           </a>
         </div>
+
+        <nav class="profile-nav">
+          <ul>
+            <li class="profile-dropdown">
+              <div class="header__profile">
+                <div class="initial">{{.Initial}}</div>
+                <div class="username">{{.Username}}</div>
+              </div>
+              <ul>
+                <li>
+                  <a href="/profile" class="header__profile-link">
+                    <img
+                      src="/static/svg/circle-user-round.svg"
+                      class="header__profile-icon"
+                    />
+                    Account Settings
+                  </a>
+                </li>
+                <li>
+                  <a href="/logout" class="header__profile-link">
+                    <img
+                      src="/static/svg/log-out.svg"
+                      class="header__profile-icon"
+                    />
+                    Logout
+                  </a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
+        {{else}}
+        <div class="header__auth-links">
+          <a href="/register" class="header__auth-link">Sign Up</a>
+          <a href="/login" class="header__auth-link">Login</a>
+        </div>
+        {{end}}
+      </div>
     </header>
 
-    {{if .Error}}
-    <div class="error-container">
-        {{.Message}}
-    </div>
-    {{end}}
-    <div class="form-cont">
-        <h1>Register</h1>
-        <form action="/register" method="POST">
-            <input type="text" id="username" name="username" minlength="3" maxlength="32" placeholder="User Name"
-                required>
-            <input type="email" id="email" name="email" minlength="6" maxlength="254" placeholder="Email" required>
-            <input type="password" id="password" name="password" minlength="8" maxlength="72" placeholder="Password"
-                required>
-            <input type="password" id="confirm_password" name="confirm_password" minlength="8" maxlength="72"
-                placeholder="Confirm Password" required>
-            <button type="submit">Register</button>
-        </form>
-        <p>Already have an account? <a href="/login">Login here</a>.</p>
+    <div class="container">
+      <form action="/register" method="POST">
+        <img src="/static/svg/registerleft.svg" alt="Register Image" />
+        <h2>Please enter your details</h2>
+        <h1>Join the community!</h1>
+
+        <div class="formfield">
+          <label for="username">User Name</label>
+          <input
+            type="text"
+            name="username"
+            id="username"
+            minlength="3"
+            maxlength="32"
+            placeholder="Your username"
+            required
+          />
+        </div>
+
+        <div class="formfield">
+          <label for="email">Email</label>
+          <input
+            type="email"
+            name="email"
+            id="email"
+            minlength="6"
+            maxlength="254"
+            placeholder="Your email"
+            required
+          />
+        </div>
+
+        <div class="formfield">
+          <label for="password">Password</label>
+          <input
+            type="password"
+            name="password"
+            id="password"
+            minlength="8"
+            maxlength="72"
+            placeholder="Create a password"
+            required
+          />
+        </div>
+
+        <div class="formfield">
+          <label for="confirm_password">Confirm Password</label>
+          <input
+            type="password"
+            name="confirm_password"
+            id="confirm_password"
+            minlength="8"
+            maxlength="72"
+            placeholder="Confirm your password"
+            required
+          />
+        </div>
+        {{if .Error}}
+        <div class="error-container" style="color: rgb(255, 35, 35);">{{.Message}}</div>
+        {{end}}
+        <input type="submit" value="Register" />
+
+        <p>Already have an account? <a href="/login">Login here</a></p>
+      </form>
     </div>
 
     <footer class="footer">
-        <div class="footer__container">
-          <p class="footer__text">
-            &copy; 2025 FORUM — Built with ❤️ by the Forum Team
-          </p>
-        </div>
-      </footer>
-</body>
-
+      <div class="footer__container">
+        <p class="footer__text">
+          &copy; 2025 FORUM — Built with ❤️ by the Forum Team
+        </p>
+      </div>
+    </footer>
+  </body>
 </html>
